[FIX] White space shown in the right of the side when surfing in Google Chrome for mobile devices.
- Add overflow hidden to the <html> element.

--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -2,6 +2,10 @@
  * - Reset CSS -
  * -------------
  */
+html {
+  overflow-x: hidden;
+}
+
 ul {
   margin-bottom: 0;
   padding: 0;
